--- a/config/cicd/base/07-eventlisteners/cicd-event-listener.yaml
+++ b/config/cicd/base/07-eventlisteners/cicd-event-listener.yaml
@@ -26,6 +26,23 @@ spec:
     name: ci-dryrun-from-push
     template:
       ref: ci-dryrun-from-push-template
+  - bindings:
+    - ref: dev-app-taxi-taxi-binding
+    - ref: github-push-binding
+    interceptors:
+    - github:
+        secretRef:
+          secretKey: webhook-secret-key
+          secretName: webhook-secret-dev-taxi
+    - cel:
+        filter: (header.match('X-GitHub-Event', 'push') && body.repository.full_name
+          == 'keithchong/taxi')
+        overlays:
+        - expression: body.ref.split('/')[2]
+          key: ref
+    name: app-ci-build-from-push-taxi
+    template:
+      ref: app-ci-template
 status:
   configuration:
     generatedName: ""
